add npm install

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,4 +27,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
+        run: npm install
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
         run: npm run build
