--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-- name: 'npm'
+- name: 'gcr.io/cloud-builders/npm'
   args: ['install']
-- name: 'npm'
+- name: 'gcr.io/cloud-builders/npm'
   args: ['run', 'build']
